# docs/swagger.json
@@ -1358,6 +1358,12 @@
                         "schema": {
                             "$ref": "#/definitions/response.ErrorResponse"
                         }
+                    },
+                    "409": {
+                        "description": "митап отменён — правка запрещена",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
                     }
                 }
             }
